# app.js
@@ -33,7 +33,7 @@ app.use((req, res, next) => {
 const nameRoutes = require("./routes/name");
 const contactsRoutes = require("./routes/contacts");
 // routes
-app.use("/name", nameRoutes);
+app.use("/routeJoe", nameRoutes);
 app.use("/contacts", contactsRoutes);
 
 // eslint-disable-next-line no-unused-vars
