# routes/name.js
@@ -1,8 +1,8 @@
 const express = require("express");
 const router = express.Router();
-const baseController = require("../controllers/name");
+const nameController = require("../controllers/name");
 
 // Lesson 1 or Branch Lesson01
-router.get("/name", baseController.getName);
+router.get("/routeJoe", nameController.routeJoe);
 
 module.exports = router;
